--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /node_modules
 /notflix-app/node_modules
-/api/node_modules
+/notflix-server/node_modules
 /data-seed/node_modules
 /.pnp
 .pnp.js
